@@ -716,6 +716,8 @@ int Egg_object::is_active
 	int from_tx, int from_ty	// Tile stepped from.
 	)
 	{
+	if (cheat.in_map_editor())
+		return 0;		// Disable in map-editor.
 	if ((flags & (1 << (int) hatched)) &&
 			!(flags & (1 << (int) auto_reset)))
 		return (0);		// For now... Already hatched.
@@ -725,8 +727,6 @@ int Egg_object::is_active
 		if (!(hour >= 9 || hour <= 5))
 			return (0);	// It's not night.
 		}
-	if (cheat.in_map_editor())
-		return 0;		// Disable in map-editor.
 	Egg_criteria cri = (Egg_criteria) get_criteria();
 
 	int deltaz = tz - get_lift();
