@@ -601,7 +601,13 @@ int Shape_info::get_rotated_frame
 	int quads			// 1=90, 2=180, 3=270.
 	)
 	{
-	if (is_barge_part())		// Piece of a barge?
+				// Seat is a special case.
+	if (barge_type == barge_seat)
+		{
+		int dir = curframe%4;	// Current dir (0-3).
+		return (curframe - dir) + (dir + quads)%4;
+		}
+	else if (is_barge_part())		// Piece of a barge?
 		switch (quads)
 			{
 		case 1:
